test/integration/page-config/pages/invalid/string-config.js
// export const config = 'hello world'

export default () => <p>hello world</p>
